--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -34,7 +34,7 @@
     </header>
 
     <main role="main" class="container">
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-md-8">
             {% block content %}{% endblock %}
           </div>
