--- a/crystal_prediction/templates/crystal_prediction/crystal_structure_predictor.html
+++ b/crystal_prediction/templates/crystal_prediction/crystal_structure_predictor.html
@@ -10,7 +10,7 @@
 
 <div class="content-section">
     <h2 class="text-center">Crystal Structure Predictor</h2>
-<form method="post" action="{% url 'crystal_structure_predictor' %}">
+<form id="prediction-form" method="post" action="{% url 'crystal_structure_predictor' %}">
     {% csrf_token %}
     <fieldset class="form-group">
         <legend class="border-bottom mb-2 small">Fill required parameters</legend>
@@ -36,7 +36,7 @@
      
      
 <div id="loading-indicator" class="text-center" style="display: none;">
-    <img src="{% static 'loading.gif' %}" alt="Processing..."> Processing... Please wait.
+    <img src="../../static/crystal_prediction/loading.gif" alt="Processing...">
 </div>
 
   
@@ -53,7 +53,7 @@
 
 <div id="prediction-section" class="text-center alert alert-success">
     <h3>Prediction:</h3>
-    <h5>Crystal System: {{ instance.predicted_xgb }}</h5>
+    <h5>Crystal System: {{ instance.predicted }}</h5>
 </div>
 
 
@@ -63,54 +63,28 @@
 </div>
 </div>
 
-
+{% endif %}
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script>
     $(document).ready(function () {
         $("#prediction-form").submit(function (e) {
-            e.preventDefault();
-
+            // Show loading GIF
+            
             $("#loading-indicator").show();
-            $("#prediction-section").empty();
+            $("#prediction-section").hide();
+            const loadingElement = document.getElementById('loading-indicator');
+        loadingElement.scrollIntoView({ behavior: 'smooth' });
+           
 
-            $.ajax({
-                type: "POST",
-                url: $(this).attr('action'),
-                data: $(this).serialize(),
-                success: function (response) {
-                    $("#loading-indicator").hide();
-
-                    if (response.processing) {
-                        // Display processing message
-                        $("#loading-indicator").show();
-                        $("#loading-indicator").text("Processing... Please wait.");
-                    } else {
-                        // Display prediction result
-                        $("#prediction-section").html(
-                            "<h3>Prediction:</h3><h5>Crystal System: " + response.instance.predicted_xgb + "</h5>"
-                        );
-                    }
-                },
-                error: function (error) {
-                    console.log("Error:", error);
-                    $("#loading-indicator").hide();
-                }
-            });
+           
         });
     });
 </script>
 
 
 
-
-
-    
-{% endif %}
-
-
-
-    
+ 
 {% endblock content %}
 
 
